Mobile list response fixed